# search-take-home

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/data/: notepad.txt
backend/features/search/: integrations.py  models.py  router.py
backend/features/streaming/: router.py
frontend/src/: App.tsx
frontend/src/features/streaming/: NotepadStream.tsx
frontend/src/lib/: api.ts  searchHistory.ts  streaming.ts
